--- a/index.html
+++ b/index.html
@@ -133,6 +133,23 @@
       font-family: inherit;
       font-size: 14px;
     }
+    .tires-section {
+  background-color: #e6f7ff; /* 薄い青 */
+  border: 2px solid #00aaff; /* 青枠 */
+  border-radius: 8px;
+  padding: 15px;
+  margin-top: 20px;
+}
+.tires-section-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #00aaff;
+  margin-bottom: 10px;
+  border-bottom: 1px dashed #00aaff;
+  padding-bottom: 5px;
+}
+
+    
   </style>
 </head>
 <body>
@@ -183,25 +200,31 @@
           <div id="daysError" class="error-message">利用日数は1日以上で入力してください</div>
         </div>
 
-        <div id="tiresFields">
-          <div class="form-group">
-            <label for="tiresInputDays">スタッドレスタイヤ日数 <span style="color: red;">*</span></label>
-            <input type="number" id="tiresInputDays" min="1" max="365" value="30" step="1">
-            <div id="tiresInputDaysError" class="error-message">スタッドレスタイヤ日数は1日以上で入力してください</div>
-          </div>
-          <div class="form-group">
-            <label for="tiresStartDate">スタッドレスタイヤ開始日 <span style="color: red;">*</span></label>
-            <input type="date" id="tiresStartDate" required>
-            <div id="tiresStartDateError" class="error-message">スタッドレスタイヤ開始日を選択してください</div>
-          </div>
-          <div class="form-group">
-            <label for="tiresEndDate">スタッドレスタイヤ終了日 <span style="color: red;">*</span></label>
-            <input type="date" id="tiresEndDate" required readonly>
-            <div id="tiresEndDateError" class="error-message">スタッドレスタイヤ終了日を設定してください</div>
-          </div>
-          <div class="form-group">
-            <span id="calculatedTiresDays"></span>
-          </div>
+      <div id="tiresFields" class="tires-section">
+  <div class="tires-section-title">スタッドレスタイヤ情報（任意項目）</div>
+  
+  <div class="form-group">
+    <label for="tiresInputDays">スタッドレスタイヤ日数 <span style="color: red;">*</span></label>
+    <input type="number" id="tiresInputDays" min="1" max="365" value="30" step="1">
+    <div id="tiresInputDaysError" class="error-message">スタッドレスタイヤ日数は1日以上で入力してください</div>
+  </div>
+
+  <div class="form-group">
+    <label for="tiresStartDate">スタッドレスタイヤ開始日 <span style="color: red;">*</span></label>
+    <input type="date" id="tiresStartDate" required>
+    <div id="tiresStartDateError" class="error-message">スタッドレスタイヤ開始日を選択してください</div>
+  </div>
+
+  <div class="form-group">
+    <label for="tiresEndDate">スタッドレスタイヤ終了日 <span style="color: red;">*</span></label>
+    <input type="date" id="tiresEndDate" required readonly>
+    <div id="tiresEndDateError" class="error-message">スタッドレスタイヤ終了日を設定してください</div>
+  </div>
+
+  <div class="form-group">
+    <span id="calculatedTiresDays"></span>
+  </div>
+
         </div>
 
         <button type="submit">見積もりを計算する</button>
