--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
     button[disabled] { background: #999; cursor: not-allowed; }
     .note { font-size: 0.9em; color: #555; }
     .hidden { display: none; }
-    #personal-info, #corporate-info, #delivery-group, #terms-personal, #terms-corporate { display: none; }
+    #personal-info, #corporate-info, #terms-personal, #terms-corporate { display: none; }
   </style>
 </head>
 <body>
