--- a/test.html
+++ b/test.html
@@ -59,16 +59,19 @@
       <!-- Step 2 -->
       <div class="form-step" data-step="2">
         <div id="personal-info">
+          <!-- 個人情報 -->
           <div class="form-group"><label for="p-name">ご契約者様名 <span style="color:red">*</span></label><input type="text" id="p-name" name="ご契約者様名" required></div>
           <div class="form-group"><label for="p-name-kana">ご契約者様名（フリガナ） <span style="color:red">*</span></label><input type="text" id="p-name-kana" name="ご契約者様名（フリガナ）" required></div>
           <div class="form-group"><label for="p-zip">郵便番号（ハイフン含まず7桁） <span style="color:red">*</span></label><input type="text" id="p-zip" name="郵便番号" required></div>
           <div class="form-group"><label for="p-address">住所 <span style="color:red">*</span></label><input type="text" id="p-address" name="住所" required><small class="note">建物名は次に入力します。</small></div>
           <div class="form-group"><label for="p-block">番地 <span style="color:red">*</span></label><input type="text" id="p-block" name="番地" required></div>
+          <div class="form-group"><label for="p-building">建物名</label><input type="text" id="p-building" name="建物名"></div>
           <div class="form-group"><label for="p-tel">携帯電話番号 <span style="color:red">*</span></label><input type="tel" id="p-tel" name="携帯電話番号" pattern="\d+" required></div>
           <div class="form-group"><label for="p-email">メールアドレス <span style="color:red">*</span></label><input type="email" id="p-email" name="メールアドレス" required></div>
           <div class="form-group"><label for="p-license">運転免許証番号<br><span style="font-size:0.9em">免許証表面の12ケタの番号</span> <span style="color:red">*</span></label><input type="text" id="p-license" name="運転免許証番号" required></div>
         </div>
         <div id="corporate-info">
+          <!-- 法人情報 -->
           <div class="form-group"><label for="c-company">法人名 <span style="color:red">*</span></label><input type="text" id="c-company" name="法人名" required></div>
           <div class="form-group"><label for="c-company-kana">法人名（フリガナ） <span style="color:red">*</span></label><input type="text" id="c-company-kana" name="法人名（フリガナ）" required></div>
           <div class="form-group"><label for="c-rep">代表者様名 <span style="color:red">*</span></label><input type="text" id="c-rep" name="代表者様名" required></div>
@@ -76,6 +79,7 @@
           <div class="form-group"><label for="c-zip">郵便番号（ハイフン含まず7桁） <span style="color:red">*</span></label><input type="text" id="c-zip" name="郵便番号" required></div>
           <div class="form-group"><label for="c-address">住所 <span style="color:red">*</span></label><input type="text" id="c-address" name="住所" required><small class="note">建物名は次に入力します。</small></div>
           <div class="form-group"><label for="c-block">番地 <span style="color:red">*</span></label><input type="text" id="c-block" name="番地" required></div>
+          <div class="form-group"><label for="c-building">建物名</label><input type="text" id="c-building" name="建物名"></div>
           <div class="form-group"><label for="c-contact">ご担当者様名 <span style="color:red">*</span></label><input type="text" id="c-contact" name="ご担当者様名" required></div>
           <div class="form-group"><label for="c-contact-tel">ご担当者様電話番号 <span style="color:red">*</span></label><input type="tel" id="c-contact-tel" name="ご担当者様電話番号" pattern="\d+" required></div>
           <div class="form-group"><label for="c-email">メールアドレス <span style="color:red">*</span></label><input type="email" id="c-email" name="メールアドレス" required></div>
