--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
     .note { font-size:0.9em; color:#555; }
     .hidden { display:none; }
     /* initial hide */
-    #personal-info, #corporate-info, #step5-5, #terms-personal, #terms-corporate { display:none; }
+    #personal-info, #corporate-info, #terms-personal, #terms-corporate { display:none; }
     /* toggle switch */
     .switch { position:relative; display:inline-block; width:40px; height:20px; margin-right:8px; }
     .switch input { opacity:0; width:0; height:0; }
